# study-quiz

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  Makefile  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260123_0001_create_questions.py  20260124_0002_add_seed_key.py  20260127_0003_create_hint_usages.py  20260127_0004_create_quiz_attempts.py  20260127_0005_add_score_percent_to_quiz_attempts.py  20260127_0006_add_meta_to_quiz_attempts.py  20260127_0007_add_auth_tables_and_user_fk.py  20260127_0008_add_oauth_accounts.py  20260130_0009_add_exam_timing_fields.py  20260201_0010_add_ai_review_to_quiz_attempts.py  20260204_0011_add_question_favorites.py  20260204_0012_add_ai_recommendations.py  20260204_0013_add_attempt_answers.py  20260204_0014_rename_attempt_answers_selected_answer.py  20260204_0015_add_attempt_type_to_attempts.py  20260204_0016_unique_in_progress_mistakes_attempt.py  20260204_0017_add_submitted_at_to_attempts.py  20260204_0018_add_question_candidates.py  20260205_0019_add_user_admin_fields.py  20260205_0020_fix_user_admin_default.py  20260206_0021_add_code_to_questions.py  20260206_0022_add_archived_at_to_questions.py  20260216_0023_add_hint_usage_fkeys.py  20260222_0024_add_simhash_to_questions.py
backend/app/: main.py
backend/app/core/: cache.py  config.py  exceptions.py  logging.py  redis_client.py  security.py
backend/app/db/: session.py
backend/app/integrations/: ai_review_chain.py  hint_chain.py  next_quiz_recommendation_chain.py  (+1 more)
backend/scripts/: ai_review_readonly_check.py
backend/tests/: conftest.py  factories.py  test_admin_question_candidates.py  test_ai_review.py  test_integration_auth.py  test_integration_favorites.py  test_integration_meta_health.py  test_integration_mistakes_review.py  test_integration_quiz_flow.py  test_question_candidates_migration.py  test_question_candidates_moderation.py  test_question_candidates_prompt_template.py  test_question_candidates_validation.py  test_question_payload.py  test_submit_attempt.py  test_user_admin_default.py
frontend/: README.md  (+4 more)
(+105 files in other folders)
