[project]
name = "quizstudy-backend"
version = "0.1.0"
description = "QuizStudy backend"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "python-dotenv>=1.0",
  "langchain>=0.2",
  "langchain-groq>=0.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = false
ignore_missing_imports = true
strict_optional = true
